--- a/tp-licencias/.classpath
+++ b/tp-licencias/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry kind="lib" path="lib/jboss-logging-3.3.2.Final.jar"/>
 	<classpathentry kind="lib" path="lib/jboss-transaction-api_1.2_spec-1.1.1.Final.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.13.jar"/>
+	<classpathentry kind="lib" path="lib/jaxb-api-2.2.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
