Se corrigieron errores varios y de integracion y se configuro la interfaz imprimir licencia

--- a/tp-licencias/bin/.gitignore
+++ b/tp-licencias/bin/.gitignore
@@ -1,11 +1,4 @@
-/builders/
-/controllers/
-/dao/
-/domain/
-/dto/
-/gui/
-/hibernate-contribuyentes.cfg.xml
-/hibernate-sistema.cfg.xml
-/res/
+/org/
 /utils/
-/validators/
+/gui/
+/domain/
